// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`document-blueprint-tree ancestors should get ancestor items 1`] = `
{
  "content": [
    {
      "text": "[{"documentType":null,"isFolder":true,"name":"_Test Folder Blueprint","id":"00000000-0000-0000-0000-000000000000","parent":null,"hasChildren":true},{"documentType":null,"isFolder":false,"name":"_Test Child Blueprint","id":"00000000-0000-0000-0000-000000000000","parent":{"id":"00000000-0000-0000-0000-000000000000"},"hasChildren":false}]",
      "type": "text",
    },
  ],
}
`;

exports[`document-blueprint-tree ancestors should handle non-existent item 1`] = `
{
  "content": [
    {
      "text": "[]",
      "type": "text",
    },
  ],
}
`;

exports[`document-blueprint-tree children should get child items 1`] = `
{
  "content": [
    {
      "text": "{"total":1,"items":[{"documentType":{"id":"a95360e8-ff04-40b1-8f46-7aa4b5983096","icon":"icon-home color-blue","collection":null},"isFolder":false,"name":"_Test Child Blueprint","id":"00000000-0000-0000-0000-000000000000","parent":{"id":"00000000-0000-0000-0000-000000000000"},"hasChildren":false}]}",
      "type": "text",
    },
  ],
}
`;

exports[`document-blueprint-tree children should handle non-existent parent 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;
